methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value sawBaggle
  while (sawBaggle){
         ^MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
  while (sawBaggle){
  ^